<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        app:layoutDescription="@xml/activity_main_xml_constraintlayout_scene"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/download_iv"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:src="@drawable/load"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/load_app_logo" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/download_github_repos"
            android:textAlignment="center"
            android:textColor="#545454"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/download_iv">

            <RadioButton
                android:id="@+id/glide_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="false"
                android:onClick="onRadioButtonClicked"
                android:text="@string/glide"
                android:textColor="#434343"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/loadapp_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/load_app"
                android:textColor="#434343"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/retrofit_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/retrofit"
                android:textColor="#434343"
                android:textSize="18sp" />
        </RadioGroup>

        <com.gmail.apigeoneer.loadapp.customView.LoadingButton
            android:id="@+id/download_cv"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:btnBgColor="@color/magenta"
            app:btnCircleColor="@color/transparent"
            app:btnTextColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>